--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .container {
   background-color: #fff;
   display: flex;
@@ -42,53 +46,40 @@ a {
   height: 35vh;
   background: black url("./images/mension.jpg") no-repeat center;
   background-size: cover;
-  filter: brightness(30%);
   position: absolute;
   top: 0;
 }
 
-.nav-bar-links {
-  font-family: "Concert One", cursive;
-  position: relative;
-  list-style-type: none;
-  width: 65vw;
-  height: 35vh;
+.nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: black;
+  background-color: white;
+  height: 80px;
+  padding: 0 10vw;
 }
 
-.all-movies-link {
-  color: #fff;
-  font-size: 3rem;
-  padding: 2rem 4rem;
-  border-radius: 30px;
+.logo {
+  height: 30px;
 }
 
-.all-movies-link-watchlist {
-  color: white;
-  font-size: 1.5rem;
-  padding: 2rem 3rem;
-  border-radius: 30px;
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  min-width: 25vw;
 }
 
-.watchlist-link {
-  color: white;
-  font-size: 1.5rem;
-  padding: 2rem 3rem;
-  border-radius: 20px;
+.logo-container h1 {
+  font-size: 2em;
 }
 
-.watchlist-link-watchlist {
-  color: #fff;
-  font-size: 3rem;
-  padding: 2rem 4rem;
-  border-radius: 30px;
+.nav-bar li:last-child {
+  border: 1px solid black;
 }
-
 /* INPUT FIELD STLING */
-
-
 
 .search-for-movie {
   width: 65vw;
@@ -139,7 +130,4 @@ a {
   background-color: rgb(88, 97, 137);
 }
 
-
 /* main contetnt here */
-
-
