--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,10 @@ ul {
   width: 100vw;
   height: 35vh;
   background: black url("./images/mension.jpg") no-repeat center;
-  background-size: cover;
-  position: absolute;
+  background-size: cover; 
   top: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .nav-bar {
@@ -78,6 +79,10 @@ ul {
 
 .nav-bar li:last-child {
   border: 1px solid black;
+  padding: 1em 2em;
+  border-radius: 10px;
+  background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
 }
 /* INPUT FIELD STLING */
 
@@ -131,3 +136,12 @@ ul {
 }
 
 /* main contetnt here */
+
+
+
+main {
+  background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  height: 100vh;
+  color: black;
+}
