--- a/src/index.css
+++ b/src/index.css
@@ -54,14 +54,10 @@ li a:hover {
   width: 100vw;
   height: 35vh;
   background: black url("./images/mension.jpg") no-repeat center;
-  background-size: cover; 
+  background-size: cover;
   top: 0;
-<<<<<<< Updated upstream
   display: flex;
   justify-content: center;
-=======
-  border-bottom: 2px solid black;
->>>>>>> Stashed changes
 }
 
 .nav-bar {
@@ -90,21 +86,12 @@ li a:hover {
   font-size: 2em;
 }
 
-<<<<<<< Updated upstream
 .nav-bar li:last-child {
   border: 1px solid black;
   padding: 1em 2em;
   border-radius: 10px;
-  background-color: #0093E9;
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-=======
-.signin {
-  border: 2px solid black;
-  border-radius: 10px;
-  background-color: #79aaea;
-  cursor: pointer;
-  padding: 0.65em 2.5em;
->>>>>>> Stashed changes
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
 
 /* INPUT FIELD STLING */
@@ -159,18 +146,9 @@ background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
 
 /* main contetnt here */
 
-<<<<<<< Updated upstream
-
-
 main {
-  background-color: #0093E9;
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   height: 100vh;
   color: black;
 }
-=======
-main {
-  background-image: linear-gradient(190deg, #43cbff 10%, #9708cc 100%);
-  height: 100vh;
-}
->>>>>>> Stashed changes
